--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3307/filmovie
+#spring.datasource.url=jdbc:mysql://localhost:3307/filmovie
+spring.datasource.url=jdbc:mysql://147.135.211.204:3307/filmovie?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootPasswordFilmovie
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
